# calvincTools-cpp

./: CMakeLists.txt  CMakePresets.json  README.md
docs/: PHASE_1_COMPLETION.md  migration_traceability_matrix.md  plan-calvincTools-prompt.md
include/calvinc_tools/: version.hpp  version_config.hpp.in
include/calvinc_tools/auth/: auth_context.hpp  authorization.hpp  password_service.hpp  user.hpp
include/calvinc_tools/database/: database_context.hpp  models.hpp  repository.hpp
include/calvinc_tools/mathexpr/: evaluate.hpp  parser.hpp
include/calvinc_tools/menucommand/: command_types.hpp  menu_repository.hpp
src/: version.cpp
src/auth/: auth_context.cpp  authorization.cpp  password_service.cpp  user.cpp
src/database/: database_context.cpp  models.cpp  repository.cpp
src/mathexpr/: evaluate.cpp  math_parser.cpp
src/menucommand/: command_types.cpp  menu_repository.cpp
tests/: CMakeLists.txt  test_auth.cpp  test_database.cpp  test_mathexpr.cpp  test_menucommand.cpp
